--- a/cyanit/static/css/welcome.css
+++ b/cyanit/static/css/welcome.css
@@ -6,6 +6,7 @@
 
 a {
     color:#fff;
+    text-decoration: none;
 }
 
 a:hover {
@@ -22,6 +23,7 @@ label:focus {
 /* for show */
 html, body {
     height: 100%;
+    font-family: "Helvetica Neue", "Luxi Sans", "DejaVu Sans", Tahoma, "Hiragino Sans GB", "Noto Sans CJK SC","Microsoft Yahei", sans-serif;
 }
 
 body {
@@ -60,5 +62,14 @@ body {
     padding: 20px;
     margin: 10px;
     display: inline-block;
+    font-size: 56px;
+}
+h2 {
+    font-size: 45px;
+    font-weight: 400;
+}
+h4 {
+    font-size: 24px;
+    font-weight: 400;
 }
 
